# RufusBigInsertions

./: CMakeLists.txt  testRun.sh
src/: CMakeLists.txt  contigs.cpp  contigs.h  insertion.cpp  insertion.h  insertions.cpp  insertions.h  parentGT.cpp  parentGT.h  util.cpp  util.h  vcfWriter.cpp  vcfWriter.h
tools/: CMakeLists.txt  detect.cpp
